name: adventofcode
version: 1.0
build-type: Simple

-- cabal: The field 'build-depends: adventofcode' refers to a library which is
-- defined within the same package. To use this feature the package must specify
-- at least 'cabal-version: >= 1.8'.
cabal-version: >= 1.8

library
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  ghc-options:     -Wall
  build-depends:   base

library aocpw
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Password
  ghc-options:     -Wall
  build-depends:   base

test-suite test-password
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        password.hs
  ghc-options:    -Wall
  build-depends:  base, aocpw, HUnit

executable 01_count_parens
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        01_count_parens.hs
  ghc-options:    -Wall

executable 02_presents
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        02_presents.hs
  ghc-options:    -Wall

executable 03_delivery_grid
  build-depends:  base, adventofcode, containers
  hs-source-dirs: bin
  main-is:        03_delivery_grid.hs
  ghc-options:    -Wall

executable 04_advent_coins
  build-depends:  base, bytestring, cryptohash-md5, directory
  hs-source-dirs: bin
  main-is:        04_advent_coins.hs
  ghc-options:    -Wall

executable 05_nice_strings
  build-depends:  base, adventofcode, containers
  hs-source-dirs: bin
  main-is:        05_nice_strings.hs
  ghc-options:    -Wall

executable 06_light_grid
  build-depends:  base, adventofcode, array
  hs-source-dirs: bin
  main-is:        06_light_grid.hs
  ghc-options:    -Wall

executable 07_logic_gates
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends:  base, adventofcode, containers >= 0.5, mtl
  hs-source-dirs: bin
  main-is:        07_logic_gates.hs
  ghc-options:    -Wall

executable 08_string_overhead
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        08_string_overhead.hs
  ghc-options:    -Wall

executable 09_hamiltonian
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends:  base, adventofcode, containers >= 0.5
  hs-source-dirs: bin
  main-is:        09_hamiltonian.hs
  ghc-options:    -Wall

executable 10_look_and_say
  build-depends:  base, array, directory
  hs-source-dirs: bin
  main-is:        10_look_and_say.hs
  ghc-options:    -Wall

executable 11_passwords
  build-depends:  base, adventofcode, aocpw, directory
  hs-source-dirs: bin
  main-is:        11_passwords.hs
  ghc-options:    -Wall

executable 12_json_numbers
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        12_json_numbers.hs
  ghc-options:    -Wall

executable 13_optimal_seating
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends:  base, adventofcode, containers >= 0.5
  hs-source-dirs: bin
  main-is:        13_optimal_seating.hs
  ghc-options:    -Wall

executable 14_reindeer_race
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        14_reindeer_race.hs
  ghc-options:    -Wall

executable 15_cookies
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        15_cookies.hs
  ghc-options:    -Wall
