name: adventofcode
version: 1.0
build-type: Simple

-- cabal: The field 'build-depends: adventofcode' refers to a library which is
-- defined within the same package. To use this feature the package must specify
-- at least 'cabal-version: >= 1.8'.
cabal-version: >= 1.8

library
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  ghc-options:     -Wall
  build-depends:   base

library aocpw
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Password
  ghc-options:     -Wall
  build-depends:   base

library aocsplit
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  ghc-options:     -Wall
  build-depends:   base

test-suite test-password
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        password.hs
  ghc-options:    -Wall
  build-depends:  base, aocpw, HUnit

executable 01_count_parens
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        01_count_parens.hs
  ghc-options:    -Wall

executable 02_presents
  build-depends:  base, adventofcode, aocsplit
  hs-source-dirs: bin
  main-is:        02_presents.hs
  ghc-options:    -Wall

executable 03_delivery_grid
  build-depends:  base, adventofcode, containers
  hs-source-dirs: bin
  main-is:        03_delivery_grid.hs
  ghc-options:    -Wall

executable 04_advent_coins
  build-depends:  base, bytestring, cryptohash-md5, directory
  hs-source-dirs: bin
  main-is:        04_advent_coins.hs
  ghc-options:    -Wall

executable 05_nice_strings
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        05_nice_strings.hs
  ghc-options:    -Wall

executable 06_light_grid
  build-depends:  base, adventofcode, aocsplit, array
  hs-source-dirs: bin
  main-is:        06_light_grid.hs
  ghc-options:    -Wall

executable 07_logic_gates
  build-depends:  base, adventofcode, containers
  hs-source-dirs: bin
  main-is:        07_logic_gates.hs
  ghc-options:    -Wall

executable 08_string_overhead
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        08_string_overhead.hs
  ghc-options:    -Wall

executable 09_hamiltonian
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends:  base, adventofcode, containers >= 0.5
  hs-source-dirs: bin
  main-is:        09_hamiltonian.hs
  ghc-options:    -Wall

executable 10_look_and_say
  build-depends:  base, array, directory
  hs-source-dirs: bin
  main-is:        10_look_and_say.hs
  ghc-options:    -Wall

executable 11_passwords
  build-depends:  base, adventofcode, aocpw, directory
  hs-source-dirs: bin
  main-is:        11_passwords.hs
  ghc-options:    -Wall

executable 12_json_numbers
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        12_json_numbers.hs
  ghc-options:    -Wall

executable 13_optimal_seating
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends:  base, adventofcode, containers >= 0.5
  hs-source-dirs: bin
  main-is:        13_optimal_seating.hs
  ghc-options:    -Wall

executable 14_reindeer_race
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        14_reindeer_race.hs
  ghc-options:    -Wall

executable 15_cookies
  build-depends:  base, adventofcode, aocsplit
  hs-source-dirs: bin
  main-is:        15_cookies.hs
  ghc-options:    -Wall

executable 16_aunt_sue
  build-depends:  base, adventofcode, aocsplit, containers
  hs-source-dirs: bin
  main-is:        16_aunt_sue.hs
  ghc-options:    -Wall

executable 17_containers
  build-depends:  base, adventofcode, containers
  hs-source-dirs: bin
  main-is:        17_containers.hs
  ghc-options:    -Wall

executable 18_game_of_life
  build-depends:  base, adventofcode, array
  hs-source-dirs: bin
  main-is:        18_game_of_life.hs
  ghc-options:    -Wall

executable 19_molecule_replacement
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends:  base, adventofcode, containers >= 0.5
  hs-source-dirs: bin
  main-is:        19_molecule_replacement.hs
  ghc-options:    -Wall

executable 20_factors
  build-depends:  base, array, directory
  hs-source-dirs: bin
  main-is:        20_factors.hs
  ghc-options:    -Wall

executable 21_rpg
  build-depends:  base
  hs-source-dirs: bin
  main-is:        21_rpg.hs
  ghc-options:    -Wall

executable 22_wizard
  build-depends:  base, containers, mtl
  hs-source-dirs: bin
  main-is:        22_wizard.hs
  ghc-options:    -Wall

executable 23_asm
  build-depends:  base, adventofcode, array
  hs-source-dirs: bin
  main-is:        23_asm.hs
  ghc-options:    -Wall

executable 24_partition
  build-depends:  base, adventofcode
  hs-source-dirs: bin
  main-is:        24_partition.hs
  ghc-options:    -Wall

executable 25_triangular
  build-depends:  base
  hs-source-dirs: bin
  main-is:        25_triangular.hs
  ghc-options:    -Wall
